# spasm

./: .gitignore  README-packaging.md  README-pp--stylesheet.md  README-pp.md  README.md  pyproject.toml  reclean.py
.github/ISSUE_TEMPLATE/: bug-report----pretty-printer.md
.github/workflows/: python-package.yml
src/spasm/pp/: __init__.py  __main__.py  _utils.py  cli.py  consts.py  processor.py
src/spasm/pp/statement_line/: __init__.py  model.py  parser.py  renderer.py
src/spasm/pp/stylesheet/: __init__.py  builtin.py  loader.py  validation.py
tests/behaviour/: factory_of_verifications_for_stylesheet_default.py  test_spasm_pp.py  test_spasm_pp__input_files.py  test_spasm_pp__rewrite_input_files.py  test_spasm_pp__stylesheet_HERITAGE.py  test_spasm_pp__stylesheet_SPORNIKET.py  test_spasm_pp__stylesheet_default.py  test_spasm_pp__stylesheet_errors.py  test_spasm_pp__stylesheet_file_comment_prefix_json.py  test_spasm_pp__stylesheet_file_empty_json.py  test_spasm_pp__stylesheet_file_incorrect_json.py  test_spasm_pp__stylesheet_file_margin_comment_json.py  test_spasm_pp__stylesheet_file_margin_label_json.py  utils.py
tests/data/: README.md  comment-prefix.json  incorrect.json  margin-comment.json  margin-label.json  source1-formatted.s  source1.s  source2-formatted.s  source2.s
tests/unit/: test_StatementLine.py  test_StatementLineParser.py  test_StatementLineRenderer.py  test_ValidationAndCopyEngine.py  test_processor.py
